[package]
name = "asteroids"
version = "0.1.0"
edition = "2021"

[dependencies.bevy]
version = "0.13.2"
default-features = false
features = [
    "bevy_asset",
    # "bevy_audio",
    # "bevy_core_pipeline",
    "bevy_gizmos",
    # "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_winit",
    "multi-threaded",
    # "png",
    # "tonemapping_luts",
    # "vorbis",
    # "webgl2",
    # "x11",
]
