[package]
name = "asteroids"
version = "0.1.0"
edition = "2021"

[dependencies.bevy]
version = "0.13.2"
default-features = false
features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_winit",
    "multi-threaded",
    # "bevy_audio",
    # "vorbis",
    # "webgl2",
    # "x11",
]

[dependencies]
bevy_turborand = { version = "0.8.2", default-features = false, features = ["wyrand"] }
