[package]
name = "asteroids"
version = "0.1.2"
edition = "2021"

[dependencies.bevy]
version = "0.13.2"
default-features = false
features = [
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_winit",
    "multi-threaded",

    # Scoreboard and game over screen
    "default_font",

    # For WASM support
    "webgl2",

    # For Linux support
    "x11",
    "wayland",
]

[dependencies]
bevy_turborand = { version = "0.8.2", default-features = false, features = ["wyrand"] }
